libs/ui/KisPlaybackEngine.cpp
@@ -52,7 +52,11 @@ void KisPlaybackEngine::play()
 void KisPlaybackEngine::pause()
 {
     KIS_SAFE_ASSERT_RECOVER_RETURN(activeCanvas() && activeCanvas()->animationState());
-    activeCanvas()->animationState()->setPlaybackState(PAUSED);
+    KisCanvasAnimationState* animationState = activeCanvas()->animationState();
+
+    animationState->setPlaybackState(PAUSED);
+
+    seek(animationState->displayProxy()->activeFrame(), SEEK_FINALIZE);
 }
 
 void KisPlaybackEngine::playPause()
@@ -61,8 +65,7 @@ void KisPlaybackEngine::playPause()
     KisCanvasAnimationState* animationState = activeCanvas()->animationState();
 
     if (animationState->playbackState() == PLAYING) {
-        pause();
-        seek(animationState->displayProxy()->activeFrame(), SEEK_FINALIZE);
+        pause();  
     } else {
         play();
     }
